--- a/index .html
+++ b/index .html
@@ -17,26 +17,26 @@
     <div class="main">
         <div class="search">
             <input type="text" placeholder="enter city name" spellcheck="false">
-            <button><img src="images/search.png"></button>
+            <button><img src="./search.png"></button>
         </div>
         <div class="error">
             <p>Invalid City name</p>
         </div>
         <div class="weather">
-            <img src="images/rain.png" class="weather-icon">
+            <img src="./rain.png" class="weather-icon">
             <h1 class="temp">22°c</h1>
             <h2 class="city">Coimbatore</h2>
 
             <div class="details">
                 <div class="col">
-                    <img src="images/humidity.png" alt="">
+                    <img src="./humidity.png" alt="">
                     <div>
                         <p class="humidity">50% </p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="images/wind.png" alt="">
+                    <img src="./wind.png" alt="">
                     <div class="textOfWind">
                         <p class="wind">15km/hr </p>
                         <p>Wind Speed</p>
@@ -71,19 +71,19 @@
 
 
             if (data.weather[0].main == "Clouds") {
-                weatherIcon.src = "images/clouds.png";
+                weatherIcon.src = "./clouds.png";
             }
             else if (data.weather[0].main == "Clear") {
-                weatherIcon.src = "images/clear.png";
+                weatherIcon.src = "./clear.png";
             }
             else if (data.weather[0].main == "Rain") {
-                weatherIcon.src = "images/rain.png";
+                weatherIcon.src = "./rain.png";
             }
             else if (data.weather[0].main == "Mist") {
-                weatherIcon.src = "images/mist.png";
+                weatherIcon.src = "./mist.png";
             }
             else if (data.weather[0].main == "Drizzle") {
-                weatherIcon.src = "images/drizzle.png";
+                weatherIcon.src = "./drizzle.png";
             }
             document.querySelector(".weather").style.display = "block";
             document.querySelector(".error").style.display = "none";
